modresort-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: modresortchan
  name: devchan-modresortchan-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: modresortchan
      release: modresort-devchan
      tier: frontend
  template: 
    metadata: 
      labels: 
        app: modresortchan
        release: modresort-devchan
        tier: frontend
    spec: 
      containers: 
        - 
          image: "kpostreich/modresort:1.0"
          imagePullPolicy: Always
          name: frontend
          ports: 
            - 
              containerPort: 9080
