modresort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devchan-modresortchan-service
  labels:
    app: modresortchan
spec:
  type: NodePort
  ports:
    port: 80
  selector:
      app: modresortchan
      release: modresort-devchan
      tier: frontend
