modresort-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app: devchan-modresortchan-route
  name: modresorts
spec: 
  host: modresorts-default.10.0.0.15.nip.io
  port: 
    targetPort: 9080
  subdomain: ""
  to: 
    kind: Service
    name: devchan-modresortchan-service
    weight: 100
  wildcardPolicy: None
